feature/auth, changed: getUsers total elements in the page